Syncing _posts/2017-01-22-test.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-22-test.md
+++ b/_posts/2017-01-22-test.md
@@ -8,11 +8,9 @@ layout: post
 permalink: http://news.apester.com/test/
 published: true
 instant_articles_submission_id:
-  - "772986992851752"
+  - "1816007805306714"
 ---
 QA
 JS Embed test - Itay Mor
 
-&nbsp;
-
-&lt;iframe height="350" width="100%" style="!important; display: block !important; height: 350px" scrolling="0" frameBorder="0" src="//stage3-renderer.qmerce.com/interaction/588064574d922c6313d65f19"&gt;&lt;/iframe&gt;
+<iframe height="350" width="100%" style="!important; display: block !important; height: 350px" scrolling="0" frameBorder="0" src="//stage3-renderer.qmerce.com/interaction/588064574d922c6313d65f19"></iframe>
