Syncing _posts/2017-01-22-test.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-22-test.md
+++ b/_posts/2017-01-22-test.md
@@ -7,10 +7,10 @@ post_excerpt: ""
 layout: post
 permalink: http://news.apester.com/test/
 published: true
-instant_articles_submission_id:
-  - "463638254024750"
 ---
 QA
 JS Embed test - Itay Mor
 
 &nbsp;
+
+[interaction id="5884bad98ab36a3115d0b19d"]
