Syncing _posts/2017-01-22-test.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-22-test.md
+++ b/_posts/2017-01-22-test.md
@@ -7,10 +7,10 @@ post_excerpt: ""
 layout: post
 permalink: http://news.apester.com/test/
 published: true
+instant_articles_submission_id:
+  - "1230751333676244"
 ---
 QA
 JS Embed test - Itay Mor
 
-&nbsp;
-
-[interaction id="5884bad98ab36a3115d0b19d"]
+&lt;div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d" height="350"&gt;&lt;/div&gt;&lt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;
