Syncing _posts/2017-01-22-test.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-22-test.md
+++ b/_posts/2017-01-22-test.md
@@ -13,4 +13,4 @@ JS Embed test - Itay Mor
 
 
 
-<div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d" height="350"></div><script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"></script>
+<div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d" height="350"></div>
