Syncing _posts/2017-01-22-test.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-22-test.md
+++ b/_posts/2017-01-22-test.md
@@ -10,4 +10,6 @@ published: true
 ---
 QA
 JS Embed test - Itay Mor
-<div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d"> &lt;div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d" height="350"&gt;&lt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;</div>
+<div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d"> &lt;div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d" height="350"&gt;&lt;/div&gt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;</div>
+<div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d">&lt;div class="apester-media" data-media-id="5884af4f8ab36a3115d0b185" height="350"&gt;&lt;/div&gt;&lt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;</div>
+<div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d">&lt;div class="apester-media" data-media-id="5884b8298ab36a3115d0b195" height="350"&gt;&lt;/div&gt;&lt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;</div>
