Syncing _posts/2017-01-22-test.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-22-test.md
+++ b/_posts/2017-01-22-test.md
@@ -12,3 +12,7 @@ QA
 JS Embed test - Itay Mor
 
 [interaction id="5882c0736904cee705a69340"]
+
+&nbsp;
+
+[interaction id="588285398ab36a3115d0af16"]
