Syncing _posts/2017-01-22-test.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-22-test.md
+++ b/_posts/2017-01-22-test.md
@@ -7,12 +7,10 @@ post_excerpt: ""
 layout: post
 permalink: http://news.apester.com/test/
 published: true
+instant_articles_submission_id:
+  - "248277635615094"
 ---
 QA
 JS Embed test - Itay Mor
 
-[interaction id="5882c0736904cee705a69340"]
-
 &nbsp;
-
-[interaction id="588285398ab36a3115d0af16"]
