Syncing _posts/2017-01-22-test.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-22-test.md
+++ b/_posts/2017-01-22-test.md
@@ -1,16 +1,18 @@
 ---
 ID: 1064
-post_title: test
+post_title: 'test &#8211; Itay Mor'
 author: Apester
 post_date: 2017-01-22 08:56:11
 post_excerpt: ""
 layout: post
 permalink: http://news.apester.com/test/
 published: true
+instant_articles_submission_id:
+  - "632208596963257"
 ---
 QA
 JS Embed test - Itay Mor
 
-<script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"></script>
-<div class="apester-media" data-media-id="5884b8298ab36a3115d0b195"></div>
-<script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"></script>
+&lt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;
+&lt;div class="apester-media" data-media-id="5884b8298ab36a3115d0b195"&gt;&lt;/div&gt;
+&lt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;
