Syncing _posts/2017-01-22-test.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-22-test.md
+++ b/_posts/2017-01-22-test.md
@@ -7,12 +7,11 @@ post_excerpt: ""
 layout: post
 permalink: http://news.apester.com/test/
 published: true
-instant_articles_submission_id:
-  - "381202772234770"
 ---
 QA
 JS Embed test - Itay Mor
 
-&lt;div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d" height="350"&gt;&lt;/div&gt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;
-&lt;div class="apester-media" data-media-id="5884af4f8ab36a3115d0b185" height="350"&gt;&lt;/div&gt;&lt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;
-&lt;div class="apester-media" data-media-id="5884b8298ab36a3115d0b195" height="350"&gt;&lt;/div&gt;&lt;script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"&gt;&lt;/script&gt;
+&nbsp;
+<div class="apester-media" data-media-id="5884bad98ab36a3115d0b19d" height="350"></div>script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js">
+<div class="apester-media" data-media-id="5884af4f8ab36a3115d0b185" height="350"></div><script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"></script>
+<div class="apester-media" data-media-id="5884b8298ab36a3115d0b195" height="350"></div><script async src="//static.apester.com/js/sdk/v1.1/apester-sdk.min.js"></script>
