Syncing _posts/2017-01-24-itay-mor.md from WordPress at http://news.apester.com (Apester Newsroom) - wpghs

--- a/_posts/2017-01-24-itay-mor.md
+++ b/_posts/2017-01-24-itay-mor.md
@@ -7,5 +7,6 @@ post_excerpt: ""
 layout: post
 permalink: http://news.apester.com/itay-mor/
 published: true
+instant_articles_submission_id:
+  - "477304235950738"
 ---
-[interaction id="58159be72aaef130597d28bb"]
